<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartpole_01</name>
  <version>0.0.0</version>
  <description>Cartpole ROS2</description>
  <maintainer email="walid.msi@outlook.com">walid</maintainer>
  <license>MIT</license>

  <!-- TODO: try with a fresh ROS2 Foxy install to verify deps -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>